--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -10,8 +10,7 @@ FILES = main.c \
 				fill_map.c \
 				key_event.c \
 				map_errors.c \
-				window_init.c \
-				utils.c
+				window_init.c
 
 SRC = $(addprefix $(FOLDER), $(FILES))
 OBJ = $(SRC:.c=.o)
