fini/bonus + norme

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -10,7 +10,9 @@ FILES = main.c \
 				fill_map.c \
 				key_event.c \
 				map_errors.c \
-				window_init.c
+				window_init.c \
+				utils.c \
+				utils2.c
 
 SRC = $(addprefix $(FOLDER), $(FILES))
 OBJ = $(SRC:.c=.o)
